--- a/SunnyHomeCare/SunnyHomeCare.csproj
+++ b/SunnyHomeCare/SunnyHomeCare.csproj
@@ -178,12 +178,6 @@
     <Compile Include="Models\Patient.cs">
       <DependentUpon>HomeCare.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Patient_PersonalContact.cs">
-      <DependentUpon>HomeCare.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Patient_ServiceContact.cs">
-      <DependentUpon>HomeCare.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\PersonalContact.cs">
       <DependentUpon>HomeCare.tt</DependentUpon>
     </Compile>
@@ -284,6 +278,7 @@
     <Content Include="Views\Admin\AdminPatientCreate.cshtml" />
     <Content Include="Views\Admin\AdminPersonalContactCreate.cshtml" />
     <Content Include="Views\Admin\AdminCaretakerCreate.cshtml" />
+    <Content Include="Views\Admin\AdminServiceContactCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
