--- a/SunnyHomeCare/SunnyHomeCare.csproj
+++ b/SunnyHomeCare/SunnyHomeCare.csproj
@@ -273,6 +273,7 @@
     <Content Include="Views\Admin\AdminPatientCreate.cshtml" />
     <Content Include="Views\Admin\AdminPersonalContactCreate.cshtml" />
     <Content Include="Views\Admin\AdminCaretakerCreate.cshtml" />
+    <Content Include="Views\Admin\AdminServiceContactCreate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
