--- a/SunnyHomeCare/SunnyHomeCare.csproj
+++ b/SunnyHomeCare/SunnyHomeCare.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\Shared\PatientPV.cshtml" />
     <Content Include="Views\Shared\ServiceContactPV.cshtml" />
     <Content Include="Views\Admin\AdminServiceContactCreate.cshtml" />
+    <Content Include="Views\Admin\Patients.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
