--- a/SunnyHomeCare/Web.config
+++ b/SunnyHomeCare/Web.config
@@ -63,7 +63,9 @@
     </compilers>
   </system.codedom>
   
-  <connectionStrings configSource="ConnectionStrings.config">
+  
+  <connectionStrings>
+    <add name="HomeCare" connectionString="metadata=res://*/Models.HomeCare.csdl|res://*/Models.HomeCare.ssdl|res://*/Models.HomeCare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=homecaresystem.database.windows.net;initial catalog=HomeCare;persist security info=True;user id=homecareadmin;Password=#€*^Å_a35x5r9z5knc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
