--- a/SunnyHomeCare/Web.config
+++ b/SunnyHomeCare/Web.config
@@ -62,11 +62,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  
-  
-  <connectionStrings>
-    <add name="HomeCare" connectionString="metadata=res://*/Models.HomeCare.csdl|res://*/Models.HomeCare.ssdl|res://*/Models.HomeCare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=homecaresystem.database.windows.net;initial catalog=HomeCare;persist security info=True;user id=homecareadmin;Password=#€*^Å_a35x5r9z5knc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  <connectionStrings configSource="ConnectionStrings.config">
   </connectionStrings>
+
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
